    individuals, because it is often the case in Gedcom files. But this is
    not mandatory in definition Gedcom 5.5. Fixed.
  - [Feb 6, 99] Accept dates with "/" (20/11/1993) although it is not
    standard Gedcom 5.5. Interpreted as day/month/year.

* GeneWeb compiler (gwc)
  - [Feb 8, 99] The option "-cg" did not work. Fixed.

* Documentation
  - [Feb 11, 99] Updated Swedish version and fixed some errors in English
    version (Lars Gustavsson).
  - [Feb 10, 99] Updated Dutch version (Joris Esch).

GeneWeb Version 1.11
--------------------

* General
  - [Jan 27, 99] Added Hebrew (Jonathan Marder, Ruth Marder)

* GeneWeb daemon/CGI (gwd)
  - [Jan 30, 99] Added link to welcome page after updates.
  - [Jan 24, 99] Added default photo names: not necessary to specify a
    photo for someone, a default name is searched.
  - [Jan 20, 99; Jan 30, 99] Added display of latest deaths.
  - [Jan 19, 99] Added direct links to siblings.
  - [Jan 18, 99] Family comment now displayed like dates (=> possible
    visibility by password restriction).
  - [Jan 18, 99] In notes and sources, the string "%s" is replaced by the
    name of the base in the same context. For example, in a source field,
    if "John Smith" is in the same database, it is possible to record it
    as:
      <a href="%sp=john;n=smith">John Smith</a>
  - [Jan 11, 99] Display declined forms (for some languages). E.g.:
      * in German: "x ist ein Sohn von einem Cousin von y"
	  ("einem" instead of the inkorrect "ein").
      * in Esperanto: "aldoni personon"
          ("personon" instead of the incorrect "persono")

* GeneWeb compiler (gwc)
  - [Jan 26, 99] Fixed bug: failure when backslashes in source.
  - [Jan 18, 99] Fixed two bugs in dates parsing: 1. "x..y" (between x and
    y) was interpreted as "x|y" (x or y) 2. did not accept "d/m/y..y".

* Gedcom to GeneWeb (ged2gwb)
  - [Feb 3, 99] No more message "Not implemented SUBM".
  - [Feb 1, 99] Accept now "BET x AND" as "AFT x" and "BET AND x" as "BEF x".