@@ -439,6 +439,15 @@ password on the welcome page will have access to modifications.
 
 <p>
 
+<ul><li> <strong>wizard_just_friend</strong> allows to forbid the
+updating of the data base. Put "yes" to do it, "no" to give the
+authorization again. It can be useful to put "yes" temporarily, while
+you are <a href="maint.htm">cleaning up</a> your base.
+
+</ul>
+
+<p>
+
 <ul><li> <strong>default_lang</strong> allows to define a default
 language in the welcome page. Without precision, the language is
 French. The possible values are: 
@@ -460,6 +469,27 @@ French. The possible values are:
 Note that whatever language is selected by default, you can choose
 another one in the welcome page by clicking in the row of flags at the
 top of the page.
+
+</ul>
+
+<p>
+
+<ul><li> <strong>can_send_photo</strong> allow the "wizards" to send
+photos. In this case in the <a href="update.htm#MAJ">update</a>
+process, they can click on a link titled <a
+href="update.htm#SndP">send photo</a>. By default, it is "no" (no
+authorization to send photos); to allow it, put "yes".
+
+</ul>
+
+<p>
+
+<ul><li> <strong>renamed</strong> allows to indicate that the name of
+a data base changed. If your site has been consulted much, and your
+base is recorded in many personal bookmarks, it is a way to redirect
+them to the new base, with the new name. If they attempt to access
+it by its old name, they see a page with a link with the same request
+to the new name.
 
 </ul>
 
