@@ -49,6 +49,8 @@ of a child.
 
 <li> <a href="#DelP">5.5.</a> Delete a Person.
 
+<li> <a href="#SndP">5.6.</a> Send a Photo.
+
 </ul>
 
 <li> <a href="#MrgP">6.</a> How to merge two persons.
@@ -213,6 +215,20 @@ to the sections:
 <li> <a href="#ModP">Modify a Person</a>
 
 <li> <a href="#DelP">Delete a Person</a>
+
+</ul>
+
+<p>
+
+If the data base owner gave the authorisation (see <a
+href="start.htm#Cnf">Configuration file</a>), you get the choice "Send
+photo". Report to the section:
+
+<p>
+
+<ul>
+
+<li> <a href="#SndP">Send a Photo</a>
 
 </ul>
 
@@ -1077,7 +1093,7 @@ is displayed.
 <h4> <a name="DelP">5.5.</a> Delete a Person </h4>
 
 You see this form, titled "Delete/Person" from a personal record, after
-having clicked on "Update", then "Delete/Person".
+having clicked on "Update", then "Delete person".
 
 <p>
 
@@ -1097,6 +1113,25 @@ his first name and surname) as well as his connection with his parents.
 
 But an "entity person" is subsisting, linked to his possible spouse and
 children.
+
+<h4> <a name="SndP">5.6.</a> Send a Photo </h4>
+
+You see this form, titled "Send photo" from a personal record, after
+having clicked on "Update", then "Send photo", but only if the data
+base owner gave the <a href="start.htm#Cnf">authorization</a> for
+that.
+
+<p>
+
+You can send (upload) a "gif" or "jpeg" file which will be associated
+to the person. This file is recorded in the site. If this person
+already had a photo, yours replaces it.
+
+<p>
+
+Important: the field "Photo" of the person must be empty, otherwise
+this field is taken for the photo, not the photo you sent. If this
+field is filled, do "Update" and "Modify person" to delete it.
 
 <h4> <a name="MrgP">6.</a> How to merge two persons </h4>
 
