@@ -52,6 +52,8 @@ d'un enfant.
 
 <li> <a href="#DelP">5.5.</a> Supprimer une Personne.
 
+<li> <a href="#SndP">5.6.</a> Envoyer une photo.
+
 </ul>
 
 <li> <a href="#MrgP">6.</a> Comment fusionner deux personnes.
@@ -233,6 +235,20 @@ personne. Reportez-vous aux sections:
 <li> <a href="#ModP">Modifier une Personne</a>
 
 <li> <a href="#DelP">Supprimer une Personne</a>
+
+</ul>
+
+<p>
+
+Si le propri&eacute;taire de la base l'a autoris&eacute;, (voir <a
+href="start.htm#Cnf">fichier de configuration</a>), vous aurez le
+choix "Envoyer photo". Reportez-vous &agrave; la section:
+
+<p>
+
+<ul>
+
+<li> <a href="#SndP">Envoyer une Photo</a>
 
 </ul>
 
@@ -1245,6 +1261,26 @@ son pr&eacute;nom et son nom) ainsi que sa connexion avec ses parents.
 Mais il subsiste toujours une "entit&eacute; personne" reli&eacute;e
 &agrave; son &eacute;ventuel conjoint et &agrave; ses &eacute;ventuels
 enfants.
+
+<h4> <a name="SndP">5.6.</a> Envoyer une Photo </h4>
+
+Vous tomberez sur ce formulaire &agrave; partir d'une page personnelle
+apr&egrave;s avoir cliqu&eacute; sur "Mise &agrave; jour", puis
+"Envoyer photo", &agrave; condition que le propri&eacute;taire de la
+base en ait donn&eacute; l'<a href="start.htm#Cnf">autorisation</a>.
+
+<p>
+
+Il s'agit d'envoyer un fichier "gif" ou "jpeg" qui sera associ&eacute;
+&agrave; la personne. Si cette personne avait d&eacute;j&agrave; une
+photo, la v&ocirc;tre la remplacera.
+
+<p>
+
+Note importante: il faut que le champ "Photo" de la personne soit
+vide, sinon, c'est ce champ-l&agrave; qui sera pris pour la photo, pas
+la photo que vous avez envoy&eacute;e. S'il est rempli, faites "Mise
+&agrave; jour" et "Modifier personne" pour le supprimer.
 
 <h4> <a name="MrgP">6.</a> Comment fusionner deux personnes </h4>
 
