@@ -18,6 +18,9 @@ GeneWeb Version 1.12
   - [Feb 8, 99] The option "-cg" did not work. Fixed.
 
 * Documentation
+  - [Feb 15, 99] Completed info for configuration files in file "start.htm", 
+    section "File a.cnf". Explained how to send photo (new feature) in file
+    "update.htm": added section 5.6, completed section 3.
   - [Feb 11, 99] Updated Swedish version and fixed some errors in English
     version (Lars Gustavsson).
   - [Feb 10, 99] Updated Dutch version (Joris Esch).
